# wsl-dashboard

./: Cargo.toml  PR_DESCRIPTION.md  README.md  build.rs
.github/workflows/: cloudflare.yml  gitee.yml  notification.yml  release.yml  winget.yml
assets/i18n/: am.toml  ar.toml  az.toml  bn.toml  ceb.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  fa.toml  fi.toml  fil.toml  fr.toml  ha.toml  he.toml  hi.toml  hu.toml  id.toml  is.toml  it.toml  ja.toml  jv.toml  kn.toml  ko.toml  ml.toml  mr.toml  ms.toml  my.toml  nl.toml  no.toml  pa.toml  pl.toml  pt.toml  ru.toml  sd.toml  sk.toml  sl.toml  sv.toml  (+10 more)
assets/logo/: icon.rc
manual/: README_am.md  README_ar.md  README_az.md  README_bn.md  README_ceb.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_es.md  README_fa.md  README_fi.md  README_fil.md  README_fr.md  README_ha.md  README_he.md  README_hi.md  README_hu.md  README_id.md  README_is.md  README_it.md  README_ja.md  README_jv.md  README_kn.md  README_ko.md  README_ml.md  README_mr.md  README_ms.md  README_my.md  README_nl.md  README_no.md  README_pa.md  README_pl.md  README_pt.md  README_ru.md  README_sd.md  README_sk.md  README_sl.md  README_sv.md  README_ta.md  (+9 more)
src/: main.rs
src/api/: cache.rs  client.rs  common.rs  mod.rs  models.rs
src/app/: autostart.rs  constants.rs  launcher.rs  mod.rs  popup.rs  runner.rs  single_instance.rs  state.rs  task_scheduler.rs  tasks.rs  tray.rs  updater.rs  window.rs
src/app/tasks/: compat_task.rs  expiry_task.rs  message_handler.rs  mod.rs  popup_handler.rs  sync_task.rs  update_task.rs
src/config/: debug.rs  instances.rs  migration.rs  mod.rs  models.rs
src/i18n/: mod.rs
src/network/: port_proxy.rs
src/ui/: app.slint  data.rs  theme.slint
src/ui/components/: common.slint  dialogs.slint  distro_card.slint  distro_not_found_view.slint  form_widgets.slint  language_data.slint  modal_manager.slint  sidebar.slint  task_status_toast.slint  title_bar.slint  usb_card.slint
src/usb/: mod.rs
src/utils/: icon_mapper.rs  logging.rs  mod.rs  registry.rs  shortcut.rs
src/wsl/: decoder.rs  executor.rs  mod.rs  models.rs  parser.rs
src/wsl/ops/: info.rs  (+7 more)
(+55 files in other folders)
