[package]
name = "wsldashboard"
version = "0.9.0"
edition = "2024"
description = "A modern, high-performance, lightweight, and low-memory WSL (Windows Subsystem for Linux) instance management dashboard."
repository = "https://github.com/owu/wsl-dashboard"
homepage = "https://www.wslui.com"
documentation = "https://docs.wslui.com"
license = "GPL-3.0"

[package.metadata]
expire = 0

[[bin]]
name = "wsldashboard"
path = "src/main.rs"

[dependencies]
slint = { version = "1.15", features = ["backend-winit", "renderer-skia"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
uuid = { version = "1.8", features = ["v4"] }
rfd = "0.14"
open = "5.3.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ureq = { version = "2.10", features = ["json", "native-tls"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
futures-util = "0.3"
semver = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
dirs = "5.0"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Registry", "Win32_System_Threading", "Win32_Security", "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_System_Console", "UI_ViewManagement", "Foundation"] }
rust-embed = "8.5"
once_cell = "1.19"
tray-icon = "0.19"
scopeguard = "1.2.0"
rust-ini = "0.21"
dhat = { version = "0.3", optional = true }
get_if_addrs = "0.5.3"
urlencoding = "2.1"
async-trait = "0.1"
native-tls = "0.2.18"

[features]
dhat-heap = ["dhat"]

[build-dependencies]
slint-build = "1.15"
embed-resource = "2.5"
image = "0.25"
toml = "0.9.10"
ico = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
